# cdbs

./: AUTHORS  ChangeLog  ChangeLog.old  Makefile.am  Makefile.in  OCamlMakefile  README.Build  README.Versioning  TODO  aclocal.m4  autogen.sh  configure  configure.ac  gen-dotty.ml
1/class/: ant-vars.mk.in  ant.mk.in  autotools-files.mk.in  autotools-vars.mk.in  autotools.mk.in  cmake.mk.in  dkms.mk.in  docbookxml.mk.in  gnome.mk.in  hbuild.mk.in  kde.mk.in  langcore.mk.in  makefile-vars.mk.in  makefile.mk.in  pd-common.mk  pd-common.mk.in  pd.mk  pd.mk.in  perl-build-vars.mk.in  perl-build.mk.in  perl-makemaker-vars.mk.in  perl-makemaker.mk.in  perl-vars.mk.in  perlmodule-vars.mk.in  perlmodule.mk.in  puredata.mk  puredata.mk.in  python-autotools.mk.in  python-common.mk.in  python-distutils.mk.in  python-module.mk.in  python-sugar.mk.in  python-vars.mk.in  python3-distutils.mk.in  python3-module.mk.in  python3-vars.mk.in  qmake.mk.in  scons-vars.mk.in  scons.mk.in  waf-vars.mk.in  (+1 more)
1/rules/: buildcore.mk.in  buildinfo.mk.in  buildvars.mk.in  copyright-check.mk.in  debhelper.mk.in  dpatch.mk.in  simple-patchsys.mk.in  tarball.mk.in  upstream-tarball.mk  upstream-tarball.mk.in  utils.mk.in
confstatMD3O4Y/: subs-1.sed  subs-2.sed  subs.sed
debian/: NEWS  TODO  cdbs.lintian-overrides  changelog  control  control.in  copyright  copyright_hints  doc-base  docs  gbp.conf  rules  source.lintian-overrides
debian/source/: lintian-overrides
doc/: Makefile  buildcore.dot  cdbs-doc-xhtml.xsl  cdbs-doc.css  cdbs-doc.xml  gen-dotty.pl
docs/: Makefile.am  cdbs.dbk  why.dbk
examples/: arts.rules  autotools+tarball.rules  dbus.rules  gnome-system-monitor.rules  java-library.rules  libgd-graph-perl.rules  python-logging.rules
guide/: Makefile  cdbs-doc-latex.xsl  cdbs-doc.css  cdbs-doc.xml
scripts/: cdbs-edit-patch  cdbs-edit-patch.1  cdbs-waf-unpack.py  license-miner  licensecheck2dep5  list-packages  list-packages.in  waf-unpack
test/: Makefile.am  Makefile.in  all-clean.sh  ant-1.sh  autotools-1.sh  autotools-2.sh  autotools-3.sh  autotools-4.sh  autotools-5.sh  autotools-lzma.sh  debhelper-1.sh  debhelper-2.sh  debhelper-3.sh  debhelper-4.sh  debhelper-5.sh  debhelper-6.sh  debhelper-7.sh  distutils-1.sh  distutils-10.sh  distutils-11.sh  distutils-12.sh  distutils-13.sh  distutils-2.sh  distutils-3.sh  distutils-4.sh  distutils-5.sh  distutils-6.sh  distutils-7.sh  distutils-8.sh  distutils-9.sh  hdparm.sh  list-missing-1.sh  patchsys-1.sh  pbuilder-all.sh  recursive.sh  testsuite_functions  udeb-1.sh
test/ant/: Test.java
test/autotools/: Makefile.am  Makefile.in  configure  configure.ac  main.c
test/autotools/autom4te.cache/: output.0  requests  traces.0
test/debian/: changelog  control  copyright  testsuite.mk
test/distutils/: MANIFEST  setup.py
test/distutils/src/: foo.py
test/hdparm/: Makefile
test/hdparm/debian/: control  rules
test/patches/: patch1.patch
tests/: ant.at  auto-build.at  auto-data-dbg.at  auto-datadbg.at  auto-dbg.at  auto-srcbuild.at  auto-tar-build.at  auto-tar-lzma.at  auto-tar.at  auto-udeb.at  auto.at  clean.at  data.at  dist-py2-tar.at  dist-py23.at  dist-py23pypy.at  dist-py3.at  dist-pypy.at  exclude.at  hdparm.at  local.at  patchsys.at  testsuite  testsuite.at
tests/data/ant/: build.xml
tests/data/autotools/: configure.ac
tests/data/distutils/: setup.py
tests/data/hdparm/: hdparm
tests/data/hdparm/debian/: changelog  copyright
tests/data/patches/: patch2.patch.uu
